my second commite

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-navbar{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  background-color: #525252;
+  color: #fff;
+  padding: 0.5rem 1rem;
+}
+
+.home-navbar .logo{
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.home-navbar .nav-links{
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.home-navbar .nav-links li{
+  margin-left: 30px;
+}
+
+.home-navbar .nav-links a{
+  color: #fff;
+  text-decoration: none;
+}
+
+.home-navbar .nav-links a.login, .home-navbar .nav-links a.signup{
+  font-weight: bold;
+}
+
+.home-navbar .nav-links a.signup {
+  color: #4CAF50; 
+}
+
+/* responsive Navbar */
+
+
+
+.home-body{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.home-body .home-body-text{
+  margin: 0;
+  padding: 30px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
+  align-items: center;
+  width: 40rem;
+  height: 35rem;
+}
+
+.home-body .home-body-text h1{
+  font-size: 50px;
+}
+
+.home-body .home-body-image{
+  margin: 0;
+  padding: 10px;
+  width: 40rem;
+  height: 36rem;
+}
+
+
+
+
+/* page of services */
+
+
+.services-body{
+  background-color: #4CAF50;
+}
+
+
+
+/* page of contact */
+
+/* ContactForm.css */
+form {
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: blue;
   color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: darkblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
